fixed results link

--- a/sampleResult.html
+++ b/sampleResult.html
@@ -36,7 +36,7 @@
                     <a href="./sampleResult.html">Sample Result</a>
                 </li>
                 <li class="nav-link not-active">
-                    <a href="/sampleObject.html">Sample Gym</a>
+                    <a href="./sampleObject.html">Sample Gym</a>
                 </li>
                 <li class="nav-link not-active">
                     <a href="./sampleSubmission.html">Add a Gym</a>
@@ -59,11 +59,16 @@
         <!-- sample results with title, rating, img, and description -->
         <ul class="sample-results container">
             <li class="result-info">
-                <h2 class="result-name">
+                <div class="result-title-contaier">
+                    <h2 class="result-name">
+                        <a href="/sampleObject.html">
+                            Impact Climbing
+                        </a>
+                    </h2>
                     <a href="https://www.impactclimbing.com/">
-                        Impact Climbing
+                        <i class="fas fa-external-link-alt"></i>
                     </a>
-                </h2>
+                </div>
                 <div class="result-review">
                     <span>
                         <i class="fas fa-star"></i>
@@ -90,11 +95,18 @@
             </li>
 
             <li class="result-info">
-                <h2 class="result-name">
-                    <a href="https://www.truenorthclimbing.com">
-                        True North Climbing
+
+
+                <div class="result-title-contaier">
+                    <h2 class="result-name">
+                        <a href="#">
+                            True North Climbing
+                        </a>
+                    </h2>
+                    <a href="https://www.truenorthclimbing.com/">
+                        <i class="fas fa-external-link-alt"></i>
                     </a>
-                </h2>
+                </div>
                 <div class="result-review">
                     <span>
                         <i class="fas fa-star"></i>
