minor changes to ensure everything validates correctly

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav role="navigation" aria-label="main navigation">
+    <nav aria-label="main navigation">
         <div class="nav-content">
             <img class="nav-logo" src="/assets/images/logo-light.png" alt="website logo">
 
@@ -71,11 +71,11 @@
             <!-- Rating filter -->
             <div class="select-dropdown">
                 <select name="rating" form="searchform">
-                    <option value="1 Star" name="one_star" class="select-dropdown-option">1 Star</option>
-                    <option value="2 Star" name="two_star" class="select-dropdown-option">2 Star</option>
-                    <option value="3 Star" name="three_star" class="select-dropdown-option">3 Star</option>
-                    <option value="4 Star" name="four_star" class="select-dropdown-option">4 Star</option>
-                    <option value="5 Star" name="five_star" class="select-dropdown-option">5 Star</option>
+                    <option value="1 Star" id="one_star" class="select-dropdown-option">1 Star</option>
+                    <option value="2 Star" id="two_star" class="select-dropdown-option">2 Star</option>
+                    <option value="3 Star" id="three_star" class="select-dropdown-option">3 Star</option>
+                    <option value="4 Star" id="four_star" class="select-dropdown-option">4 Star</option>
+                    <option value="5 Star" id="five_star" class="select-dropdown-option">5 Star</option>
                 </select>
             </div>
         </form>
