--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav role="navigation" aria-label="main navigation">
+    <nav aria-label="main navigation">
         <div class="nav-content">
             <img class="nav-logo" src="/assets/images/logo-light.png" alt="website logo">
 
@@ -52,8 +52,8 @@
     </nav>
     <main class="mountain-bg">
         <h1 class="page-title primary-transparent-bg container">Login</h1>
-        <!-- Form which will send a POST request to login (method empty for now) -->
-        <form class="submission-form" method="">
+        <!-- Form which will send a POST request to login (broken for now) -->
+        <form class="submission-form" method="post">
             <div class="form-input">
                 <label>Email</label>
                 <input class="block-input" type="email" name="email" autocomplete="email">
