--- a/sampleResult.html
+++ b/sampleResult.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav role="navigation" aria-label="main navigation">
+    <nav aria-label="main navigation">
         <div class="nav-content">
             <img class="nav-logo" src="/assets/images/logo-light.png" alt="website logo">
 
@@ -89,8 +89,7 @@
                     the climbing and fitness industry to get your business geared for success.
                 </p>
                 <div class="result-image">
-                    <img src="/assets/images/impact.jpeg" alt="Result Image" alt="Impact climbing gym">
-                </div>
+                    <img src="/assets/images/impact.jpeg" alt="Impact climbing gym">
                 </div>
             </li>
 
@@ -129,8 +128,7 @@
                     John Gross - Owner
                 </p>
                 <div class="result-image">
-                    <img src="/assets/images/trueNorth.jpeg" alt="Result Image">
-                </div>
+                    <img src="/assets/images/trueNorth.jpeg" alt="True North Climbing">
                 </div>
             </li>
         </ul>
