--- a/sampleObject.html
+++ b/sampleObject.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav role="navigation" aria-label="main navigation">
+    <nav aria-label="main navigation">
         <div class="nav-content">
             <img class="nav-logo" src="/assets/images/logo-light.png" alt="website logo">
 
