--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav role="navigation" aria-label="main navigation">
+    <nav aria-label="main navigation">
         <div class="nav-content">
             <img class="nav-logo" src="/assets/images/logo-light.png" alt="website logo">
 
@@ -53,7 +53,7 @@
     <main class="mountain-bg">
         <h1 class="page-title primary-transparent-bg container">Register for an Account</h1>
         <!-- Form which will send a POST request to sign up (empty for now) -->
-        <form class="submission-form" method="">
+        <form class="submission-form" method="post">
             <div class="form-input">
                 <label>First Name</label>
                 <input class="block-input" type="text" name="first-name" autocomplete="given-name">
@@ -80,18 +80,20 @@
             </div>
 
             <div>
-                <Birthdate class="block-label mb-05">Birthdate</label>
-                    <input class="date-input" type="date" name="birthdate" autocomplete="bday">
+                <label class="block-label mb-05">Birthdate</label>
+                <input class="date-input" type="date" name="birthdate" autocomplete="bday">
             </div>
 
             <div>
                 <label class="block-label mb-05">Gender</label>
 
-                <input type="radio" name="gender" value="Male">
+                <input type="radio" name="gender" value="Male" id="male">
                 <label class="radio-label" for="male">Male</label>
-                <input type="radio" name="gender" value="Female">
+
+                <input type="radio" name="gender" value="Female" id="female">
                 <label class="radio-label" for="female">Female</label>
-                <input type="radio" name="gender" value="Other">
+
+                <input type="radio" name="gender" value="Other" id="other">
                 <label class="radio-label" for="other">Other</label>
             </div>
 
