minor changes to follow submission guidelines

--- a/individual_sample.html
+++ b/individual_sample.html
@@ -30,21 +30,21 @@
             <!-- navbar links -->
             <ul class="nav-links">
                 <li class="nav-link not-active">
-                    <a href="./index.html">Home</a>
+                    <a href="/">Home</a>
                 </li>
                 <li class="nav-link not-active">
-                    <a href="./sampleResult.html">Sample Result</a>
+                    <a href="./results_sample.html">Sample Result</a>
                 </li>
                 <li class="nav-link active">
-                    <a href="/sampleObject.html">Sample Gym</a>
+                    <a href="/individual_sample.html">Sample Gym</a>
                 </li>
                 <li class="nav-link not-active">
-                    <a href="./sampleSubmission.html">Add a Gym</a>
+                    <a href="./submission.html">Add a Gym</a>
                 </li>
 
                 <!-- auth buttons -->
                 <li class="nav-buttons">
-                    <a class="nav-button" href="/signup.html">Sign up</a>
+                    <a class="nav-button" href="/registration.html">Sign up</a>
                     <a class="nav-button" href="/login.html">Sign in</a>
                 </li>
             </ul>
