made map popup link to impact climbing

--- a/results_sample.html
+++ b/results_sample.html
@@ -145,7 +145,7 @@
         </a>
     </footer>
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9fhzvQN-dCsJmqIf7ShehJxlkHfDaQZ8&callback=initMap&libraries=&v=weekly"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9fhzvQN-dCsJmqIf7ShehJxlkHfDaQZ8&callback=initResultsMap&libraries=&v=weekly"
         async
     ></script>
 </body>
