added map to the sample gym page

--- a/individual_sample.html
+++ b/individual_sample.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/style.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <script src="./index.js"></script>
     <title>Sample Object | Rock Review</title>
     <link rel="icon" type="image/png" href="assets/images/fav2.png" />
 </head>
@@ -82,8 +83,8 @@
         <div class="object-image">
             <img src="/assets/images/impact.jpeg" alt="Result Image">
         </div>
-        <div class="object-image">
-            <img src="/assets/images/impact-map.png" alt="Result Image">
+        <div class="object-image map-container">
+            <div id="gym-location"></div>
         </div>
         <!-- location reviews -->
         <div>
@@ -151,6 +152,10 @@
             <i class="fab fa-github fa-2x"></i>
         </a>
     </footer>
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9fhzvQN-dCsJmqIf7ShehJxlkHfDaQZ8&callback=initGymMap&libraries=&v=weekly"
+    async
+></script>
 </body>
 
 </html>
