added geolocation to the search results

--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
 					</button>
 				</div>
 				<!-- Find gyms near me -->
-				<div class="gym-near-me" onclick="gymsNearMe()">Find gyms near me</div>
+
+				<button class="gym-near-me" type="button" onclick="gymsNearMe()">
+					Find gyms near me
+				</button>
+
 				<!-- Rating filter -->
 				<div class="select-dropdown">
 					<select name="rating" form="searchform">
