--- a/submission.html
+++ b/submission.html
@@ -78,7 +78,7 @@
 						type="number"
 						name="lattitude"
 						value=""
-						;
+						step=".00000001"
 					/>
 				</div>
 
@@ -90,7 +90,7 @@
 						type="number"
 						name="longitude"
 						value=""
-						;
+						step=".00000001"
 					/>
 					<label id="current-location" onclick="useMyLocation()"
 						>Use my current location</label
